modified paragraph for scene 3: correctly placed, more visible, and more more relevant text

--- a/assets/style/firstSecondThird/firstSecondThird.scss
+++ b/assets/style/firstSecondThird/firstSecondThird.scss
@@ -450,6 +450,17 @@ html {
         }
     }
 
+    &__text {
+        position: absolute;
+        left: 25%;
+        width: 50%;
+        top: 50%;
+        padding: 5%;
+        text-align: center;
+        box-shadow: 0px 0px 2vw 1vw rgba(0, 0, 0, 0.381);
+        background-color: colors.$forest-bg;
+    }
+
     &__seed {
         position: absolute;
         width: 5%;
